--- a/src/components/navbar/index.scss
+++ b/src/components/navbar/index.scss
@@ -3,9 +3,10 @@ header {
   display: flex;
   padding: 0px 40px;
   flex-direction: column;
-  box-shadow: -25px -2px 76px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: -25px -2px 76px 0px rgba(0, 0, 0, 0.15);
   position: fixed;
   background: #ffffff;
+  z-index: 2;
 
   a {
     text-decoration: none;
